# orrery

./: .cvsignore  AUTHORS  ChangeLog  INSTALL  INSTALL.Orrery  Makedefs  Makefile.am  NEWS  README  configure.ac  configure.in  mktxmesh  mktxmesh.pl  orrery_funcs.c  peri2elem  peri2elem.tcl  quick2elem  quick2elem.pl  reconf  stargv  stargv.pl  tailcone  tailcone.pl  testwish.c
data/: .cvsignore  Earth  Jupiter  Makefile.am  Mars  Moon  Neptune  Saturn  Sun  Tail  Uranus  Venus  backstep.xbm  ball  browser.tcl  cyl.mesh  earth.ppm.Z  label.xbm  latlon.mesh  marshemi.mesh  oneface.mesh  orbit.xbm  orrery  orrery.elements  orrery.elements.whole  orrery.in  run.xbm  sinu.mesh  stars-to-mag-4.oogl  stars-to-mag-5.5.oogl  stars-to-mag-5.oogl  stars-to-mag-7.0-big.oogl  stars-to-mag-7.0.oogl  stars-to-mag-7.5.oogl  stars.oogl  step.xbm  texture.xbm  uranus.tiff  vectext.tcl  vis.xbm  (+1 more)
data/orr/: Hale-Bopp-03.31-context.orr  Hale-Bopp-03.31.orr  Hyakutake-closest-approach.orr  Makefile.am  lunar-eclipse-1997.03.23.orr  moon-from-earth.orr  planets1.orr  reset.orr  saturn-ringless.orr  solar-eclipse-1997.03.08.orr  solar-eclipse-1997.03.09.orr
m4/: geomview.m4
