SUBDIRS = orr

datamodulesorrerydir = $(geomdatadir)/modules/orrery

datamodulesorrery_DATA =     \
  orrery                     \
  Earth                      \
  Jupiter                    \
  Mars                       \
  Moon                       \
  Neptune                    \
  Saturn                     \
  Sun                        \
  Tail                       \
  Uranus                     \
  Venus                      \
  backstep.xbm               \
  ball                       \
  browser.tcl                \
  cyl.mesh                   \
  earth.ppm.Z                \
  jupiter.ppm.gz             \
  label.xbm                  \
  latlon.mesh                \
  mars+270.ppm.gz            \
  mars+90.ppm.gz             \
  mars.ppm.gz                \
  marshemi.mesh              \
  moon.pgm.gz                \
  oneface.mesh               \
  orbit.xbm                  \
  orrery.elements            \
  orrery.elements.whole      \
  run.xbm                    \
  saturn.pgm.gz              \
  sinu.mesh                  \
  stars-to-mag-4.oogl        \
  stars-to-mag-5.5.oogl      \
  stars-to-mag-5.oogl        \
  stars-to-mag-6.oogl        \
  stars-to-mag-7.0-big.oogl  \
  stars-to-mag-7.0.oogl      \
  stars-to-mag-7.5.oogl      \
  stars.oogl                 \
  step.xbm                   \
  texture.xbm                \
  uranus.tiff                \
  vectext.tcl                \
  venus.pgm.gz               \
  vis.xbm                    \
  wire.xbm

EXTRA_DIST = ${datamodulesorrery_DATA}
