datamodulesorreryorrdir = $(geomdatadir)/modules/orrery/orr

datamodulesorreryorr_DATA =       \
  Hale-Bopp-03.31-context.orr	  \
  Hale-Bopp-03.31.orr		  \
  Hyakutake-closest-approach.orr  \
  lunar-eclipse-1997.03.23.orr	  \
  moon-from-earth.orr		  \
  planets1.orr			  \
  reset.orr			  \
  saturn-ringless.orr		  \
  solar-eclipse-1997.03.08.orr	  \
  solar-eclipse-1997.03.09.orr

EXTRA_DIST = ${datamodulesorreryorr_DATA}
